Fix column spacing
Previously, columns extended beyond the buttons
so content was cut-off.

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -177,19 +177,19 @@ header {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 92svh;
+  height: 90svh;
 }
 
 .left-container,
 .right-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 .weather-details-container {
-  margin-top: 30px;
+  margin-top: 10px;
   height: 100%;
     text-align: center;
 }
